parser/gen/AgentSpeakParser.java
// Generated from /home/msotafa/IdeaProjects/antr4grammars/parser/src/main/antlr4/grammar/AgentSpeak.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AgentSpeakParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FOR=1, IF=2, ELIF=3, ELSE=4, IN=5, LOGICALVALUE=6, NUMBER=7, CONSTANTNUMBER=8, 
		STRING=9, STRONGNEGATION=10, DEFAULTNEGATION=11, RETURNS=12, OBJECT_REF=13, 
		AS=14, RELATIONALOPERATOR=15, ASSIGNOPERATOR=16, LOGICALOPERATOR1=17, 
		LOGICALOPERATOR2=18, LOGICALOPERATOR3=19, ARITHMETICOPERATOR1=20, ARITHMETICOPERATOR2=21, 
		ARITHMETICOPERATOR3=22, UNARYOPERATOR=23, ANNOTATION=24, ANNOTATION_STRING=25, 
		ANNOTATION_VARIABLEDESCRIPTION=26, ANNOTATION_CONSTANT=27, VARIABLEATOM=28, 
		FUNC_NAME=29, ATOM=30, OBJECT_ATOM=31, EXCLAMATIONMARK=32, COMMA=33, DOUBLEEXCLAMATIONMARK=34, 
		QUESTIONMARK=35, DOLLAR=36, VLINE=37, HASH=38, LEFTARROW=39, RIGHTARROW=40, 
		RIGHTARROWDOUBLE=41, RULEOPERATOR=42, AT=43, COLON=44, SEMICOLON=45, DOT=46, 
		UNDERSCORE=47, SLASH=48, LEFTSHIFT=49, RIGHTSHIFT=50, LEFTROUNDBRACKET=51, 
		RIGHTROUNDBRACKET=52, LEFTANGULARBRACKET=53, RIGHTANGULARBRACKET=54, LEFTCURVEDBRACKET=55, 
		RIGHTCURVEDBRACKET=56, DECONSTRUCT=57, WHITESPACE=58, LINECOMMENT=59, 
		BLOCKCOMMENT=60;
	public static final int
		RULE_belief = 0, RULE_initialgoal = 1, RULE_initialachievegoal = 2, RULE_initialmaintenancegoal = 3, 
		RULE_plan = 4, RULE_plantrigger = 5, RULE_beliefactiontrigger = 6, RULE_plandefinition = 7, 
		RULE_body = 8, RULE_bodyformula = 9, RULE_expression = 10, RULE_assignment_statement = 11, 
		RULE_beliefaction = 12, RULE_for_loop = 13, RULE_if_else = 14, RULE_condition_block = 15, 
		RULE_code_block = 16, RULE_testgoal = 17, RULE_achievementgoal = 18, RULE_maintenancegoal = 19, 
		RULE_primitiveaction = 20, RULE_function_call = 21, RULE_term = 22, RULE_termvalue = 23, 
		RULE_literal = 24, RULE_termlist = 25, RULE_paramlist = 26, RULE_variable = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"belief", "initialgoal", "initialachievegoal", "initialmaintenancegoal", 
			"plan", "plantrigger", "beliefactiontrigger", "plandefinition", "body", 
			"bodyformula", "expression", "assignment_statement", "beliefaction", 
			"for_loop", "if_else", "condition_block", "code_block", "testgoal", "achievementgoal", 
			"maintenancegoal", "primitiveaction", "function_call", "term", "termvalue", 
			"literal", "termlist", "paramlist", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'for'", "'if'", "'elif'", "'else'", "'in'", null, null, null, 
			null, "'~'", "'not'", "'returns'", null, "'as'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'!'", "','", "'!!'", "'?'", "'$'", "'|'", "'#'", null, "'->'", 
			"'=>'", "':-'", "'@'", "':'", "';'", "'.'", "'_'", "'/'", "'<<'", "'>>'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "'=..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FOR", "IF", "ELIF", "ELSE", "IN", "LOGICALVALUE", "NUMBER", "CONSTANTNUMBER", 
			"STRING", "STRONGNEGATION", "DEFAULTNEGATION", "RETURNS", "OBJECT_REF", 
			"AS", "RELATIONALOPERATOR", "ASSIGNOPERATOR", "LOGICALOPERATOR1", "LOGICALOPERATOR2", 
			"LOGICALOPERATOR3", "ARITHMETICOPERATOR1", "ARITHMETICOPERATOR2", "ARITHMETICOPERATOR3", 
			"UNARYOPERATOR", "ANNOTATION", "ANNOTATION_STRING", "ANNOTATION_VARIABLEDESCRIPTION", 
			"ANNOTATION_CONSTANT", "VARIABLEATOM", "FUNC_NAME", "ATOM", "OBJECT_ATOM", 
			"EXCLAMATIONMARK", "COMMA", "DOUBLEEXCLAMATIONMARK", "QUESTIONMARK", 
			"DOLLAR", "VLINE", "HASH", "LEFTARROW", "RIGHTARROW", "RIGHTARROWDOUBLE", 
			"RULEOPERATOR", "AT", "COLON", "SEMICOLON", "DOT", "UNDERSCORE", "SLASH", 
			"LEFTSHIFT", "RIGHTSHIFT", "LEFTROUNDBRACKET", "RIGHTROUNDBRACKET", "LEFTANGULARBRACKET", 
			"RIGHTANGULARBRACKET", "LEFTCURVEDBRACKET", "RIGHTCURVEDBRACKET", "DECONSTRUCT", 
			"WHITESPACE", "LINECOMMENT", "BLOCKCOMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AgentSpeak.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AgentSpeakParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BeliefContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AgentSpeakParser.DOT, 0); }
		public BeliefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_belief; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).enterBelief(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).exitBelief(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentSpeakVisitor ) return ((AgentSpeakVisitor<? extends T>)visitor).visitBelief(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeliefContext belief() throws RecognitionException {
		BeliefContext _localctx = new BeliefContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_belief);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			literal();
			setState(57);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitialgoalContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(AgentSpeakParser.DOT, 0); }
		public AchievementgoalContext achievementgoal() {
			return getRuleContext(AchievementgoalContext.class,0);
		}
		public MaintenancegoalContext maintenancegoal() {
			return getRuleContext(MaintenancegoalContext.class,0);
		}
		public InitialgoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialgoal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).enterInitialgoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).exitInitialgoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentSpeakVisitor ) return ((AgentSpeakVisitor<? extends T>)visitor).visitInitialgoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitialgoalContext initialgoal() throws RecognitionException {
		InitialgoalContext _localctx = new InitialgoalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_initialgoal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXCLAMATIONMARK:
				{
				setState(59);
				achievementgoal();
				}
				break;
			case DOUBLEEXCLAMATIONMARK:
				{
				setState(60);
				maintenancegoal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(63);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitialachievegoalContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AgentSpeakParser.DOT, 0); }
		public TerminalNode EXCLAMATIONMARK() { return getToken(AgentSpeakParser.EXCLAMATIONMARK, 0); }
		public InitialachievegoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialachievegoal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).enterInitialachievegoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).exitInitialachievegoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentSpeakVisitor ) return ((AgentSpeakVisitor<? extends T>)visitor).visitInitialachievegoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitialachievegoalContext initialachievegoal() throws RecognitionException {
		InitialachievegoalContext _localctx = new InitialachievegoalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_initialachievegoal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(65);
			match(EXCLAMATIONMARK);
			}
			setState(66);
			literal();
			setState(67);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitialmaintenancegoalContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AgentSpeakParser.DOT, 0); }
		public TerminalNode DOUBLEEXCLAMATIONMARK() { return getToken(AgentSpeakParser.DOUBLEEXCLAMATIONMARK, 0); }
		public InitialmaintenancegoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialmaintenancegoal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).enterInitialmaintenancegoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).exitInitialmaintenancegoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentSpeakVisitor ) return ((AgentSpeakVisitor<? extends T>)visitor).visitInitialmaintenancegoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitialmaintenancegoalContext initialmaintenancegoal() throws RecognitionException {
		InitialmaintenancegoalContext _localctx = new InitialmaintenancegoalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_initialmaintenancegoal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(69);
			match(DOUBLEEXCLAMATIONMARK);
			}
			setState(70);
			literal();
			setState(71);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlanContext extends ParserRuleContext {
		public ExpressionContext condition;
		public PlantriggerContext plantrigger() {
			return getRuleContext(PlantriggerContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public PlandefinitionContext plandefinition() {
			return getRuleContext(PlandefinitionContext.class,0);
		}
		public TerminalNode DOT() { return getToken(AgentSpeakParser.DOT, 0); }
		public List<TerminalNode> ANNOTATION() { return getTokens(AgentSpeakParser.ANNOTATION); }
		public TerminalNode ANNOTATION(int i) {
			return getToken(AgentSpeakParser.ANNOTATION, i);
		}
		public TerminalNode COLON() { return getToken(AgentSpeakParser.COLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PlanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).enterPlan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).exitPlan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentSpeakVisitor ) return ((AgentSpeakVisitor<? extends T>)visitor).visitPlan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlanContext plan() throws RecognitionException {
		PlanContext _localctx = new PlanContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_plan);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ANNOTATION) {
				{
				{
				setState(73);
				match(ANNOTATION);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			plantrigger();
			setState(80);
			literal();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(81);
				match(COLON);
				setState(82);
				((PlanContext)_localctx).condition = expression(0);
				}
			}

			setState(85);
			plandefinition();
			setState(86);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlantriggerContext extends ParserRuleContext {
		public TerminalNode ARITHMETICOPERATOR3() { return getToken(AgentSpeakParser.ARITHMETICOPERATOR3, 0); }
		public TerminalNode QUESTIONMARK() { return getToken(AgentSpeakParser.QUESTIONMARK, 0); }
		public TerminalNode EXCLAMATIONMARK() { return getToken(AgentSpeakParser.EXCLAMATIONMARK, 0); }
		public TerminalNode DOUBLEEXCLAMATIONMARK() { return getToken(AgentSpeakParser.DOUBLEEXCLAMATIONMARK, 0); }
		public PlantriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plantrigger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).enterPlantrigger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).exitPlantrigger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentSpeakVisitor ) return ((AgentSpeakVisitor<? extends T>)visitor).visitPlantrigger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlantriggerContext plantrigger() throws RecognitionException {
		PlantriggerContext _localctx = new PlantriggerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_plantrigger);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(88);
			match(ARITHMETICOPERATOR3);
			}
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EXCLAMATIONMARK) | (1L << DOUBLEEXCLAMATIONMARK) | (1L << QUESTIONMARK))) != 0)) {
				{
				setState(89);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EXCLAMATIONMARK) | (1L << DOUBLEEXCLAMATIONMARK) | (1L << QUESTIONMARK))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeliefactiontriggerContext extends ParserRuleContext {
		public Token first;
		public Token second;
		public List<TerminalNode> ARITHMETICOPERATOR3() { return getTokens(AgentSpeakParser.ARITHMETICOPERATOR3); }
		public TerminalNode ARITHMETICOPERATOR3(int i) {
			return getToken(AgentSpeakParser.ARITHMETICOPERATOR3, i);
		}
		public BeliefactiontriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beliefactiontrigger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).enterBeliefactiontrigger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).exitBeliefactiontrigger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentSpeakVisitor ) return ((AgentSpeakVisitor<? extends T>)visitor).visitBeliefactiontrigger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeliefactiontriggerContext beliefactiontrigger() throws RecognitionException {
		BeliefactiontriggerContext _localctx = new BeliefactiontriggerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_beliefactiontrigger);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((BeliefactiontriggerContext)_localctx).first = match(ARITHMETICOPERATOR3);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARITHMETICOPERATOR3) {
				{
				setState(93);
				((BeliefactiontriggerContext)_localctx).second = match(ARITHMETICOPERATOR3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlandefinitionContext extends ParserRuleContext {
		public TerminalNode RIGHTARROWDOUBLE() { return getToken(AgentSpeakParser.RIGHTARROWDOUBLE, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public PlandefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plandefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).enterPlandefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentSpeakListener ) ((AgentSpeakListener)listener).exitPlandefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentSpeakVisitor ) return ((AgentSpeakVisitor<? extends T>)visitor).visitPlandefinition(this);
			else return visitor.visitChildren(this);
		}
	}
